--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,6 +90,7 @@ layout: default
     <div class="content-container">
 
       <ul class="post-list alpha-toggle-list active-list">
+        <h3>alpha</h3>
         {% assign recipeList = site.posts | sort:'title' %}
 
         {%- for recipe in recipeList -%}
@@ -121,6 +122,7 @@ layout: default
       </ul>
 
       <ul class="post-list new-toggle-list">
+        <h3>latest</h3>
         {% assign recipeList = site.posts | sort:'date' %}
 
         {%- for recipe in recipeList -%}
@@ -153,6 +155,7 @@ layout: default
       {% comment %}<!-- List all posts associated to their tag -->{% endcomment %}
       {% for tag in site.tags %}
         <ul class="post-list {{tag[0] | replace: " ", "-" }}-toggle-list">
+          <h3>{{ tag[0] }}</h3>
           {% for post in tag[1] %}
 
             {% comment %} <!-- Filter out night mode posts --> {% endcomment %}
