adding adsense and renaming GA include to more generic Google naming

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,5 +19,5 @@
   <!-- <meta name="msapplication-TileColor" content="#FF1744"> -->
 
   {%- feed_meta -%}
-  {%- include google-analytics.html -%}
+  {%- include google-pipelines.html -%}
 </head>
