--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1305,7 +1305,7 @@ a.post-link:hover .double-arrow svg {
   width: 100%;
 
   @media (min-width: 720px) {
-    width: 50%;
+    // width: 50%;
   }
 }
 .nutrition-header {
