--- a/_layouts/nm/nm-post.html
+++ b/_layouts/nm/nm-post.html
@@ -31,6 +31,36 @@ Assign Start / End Dates / Time Variables
 {% endcomment %}
 
 
+{% comment %} Macro Totals Logic {% endcomment %}
+
+{%- assign ingredients = page.ingredientList -%}
+{%- assign totalCals = 0 -%}
+{%- assign totalFats = 0 -%}
+{%- assign totalChole = 0 -%}
+{%- assign totalSodium = 0 -%}
+{%- assign totalSugar = 0 -%}
+{%- assign totalProtein = 0 -%}
+{%- assign totalFiber = 0 -%}
+{%- assign totalTHC = 0 -%}
+
+{%- for ingredient in ingredients -%}
+
+  {% assign totalCals = totalCals | plus: ingredient.cals %}
+  {% assign totalCarbs = totalCarbs | plus: ingredient.carbs %}
+  {% assign totalFats = totalFats | plus: ingredient.fats %}
+  {% assign totalChole = totalChole | plus: ingredient.chole %}
+  {% assign totalSodium = totalSodium | plus: ingredient.sodium %}
+  {% assign totalSugar = totalSugar | plus: ingredient.sugar %}
+  {% assign totalProtein = totalProtein | plus: ingredient.protein %}
+  {% assign totalFiber = totalFiber | plus: ingredient.fiber %}
+  {% assign totalTHC = totalTHC | plus: ingredient.thc %}
+
+{%- endfor -%}
+
+{%- assign serving = page.servingsCount -%}
+{%- assign prepTime = page.prepTime -%}
+{%- assign cookTime = page.cookTime -%}
+
 
 <div class="notification-banner">
   <div class="close-button-trigger">
@@ -45,11 +75,6 @@ Assign Start / End Dates / Time Variables
 
 
 <article class="recipe-page">
-
-  {%- assign cals = page.calCount -%}
-  {%- assign serving = page.servingsCount -%}
-  {%- assign prepTime = page.prepTime -%}
-  {%- assign cookTime = page.cookTime -%}
 
   <div class="recipe-media">
     {%- if page.image or page.video -%}
@@ -172,21 +197,38 @@ Assign Start / End Dates / Time Variables
           </div>
 
           <div class="macro-container">
-            {%- assign macros = page.macroList -%}
-            {%- for macro in macros -%}
-
-            {%- if macro.amount contains 'n/a' -%}
-              <div class="macro disabled">
-                <span>{{macro.name}}</span>
-                <span><strong>{{ macro.amount }}</strong></span>
-              </div>
-            {% else %}
-              <div class="macro">
-                <span>{{macro.name}}</span>
-                <span><strong>{{ macro.amount }}</strong></span>
-              </div>
-            {%- endif -%}
-            {%- endfor -%}
+            <div class="macro">
+              <span>Carbs</span>
+              <span><strong>{{ totalCarbs | divided_by: serving }}g</strong></span>
+            </div>
+            <div class="macro">
+              <span>Fat</span>
+              <span><strong>{{ totalFats | divided_by: serving }}g</strong></span>
+            </div>
+            <div class="macro">
+              <span>Cholesterol</span>
+              <span><strong>{{ totalChole | divided_by: serving }}mg</strong></span>
+            </div>
+            <div class="macro">
+              <span>Sodium</span>
+              <span><strong>{{ totalSodium | divided_by: serving }}mg</strong></span>
+            </div>
+            <div class="macro">
+              <span>Sugar</span>
+              <span><strong>{{ totalSugar | divided_by: serving }}g</strong></span>
+            </div>
+            <div class="macro">
+              <span>Protein</span>
+              <span><strong>{{ totalProtein | divided_by: serving }}g</strong></span>
+            </div>
+            <div class="macro">
+              <span>Fiber</span>
+              <span><strong>{{ totalFiber | divided_by: serving }}g</strong></span>
+            </div>
+            <div class="macro">
+              <span>THC</span>
+              <span><strong>{{ totalTHC | divided_by: serving }}mg</strong></span>
+            </div>
           </div>
         </div>
 
